SMO changes, course banner issues, register form spacing issues, short-term-course one ticket,

--- a/themes/custom/athena/assets/styles/modules/_coursePageBannerSection.scss
+++ b/themes/custom/athena/assets/styles/modules/_coursePageBannerSection.scss
@@ -7,7 +7,7 @@
   //overflow: hidden;
 // z-index:99;
 min-height: 425px;
-top:10px;
+top:25px;
 
 a {color:#fff;}
 
